--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -2,7 +2,7 @@ name: Waka Readme Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day at midnight
+    - cron: '0 0 * * *'
   push:
     branches:
       - main
@@ -15,3 +15,4 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
